--- a/src/style.css
+++ b/src/style.css
@@ -85,8 +85,8 @@ img {
   position: relative;
   margin: 0px auto;
   text-align: center;
-  right: 20px;
-  top: 5px;
+  right: 10px;
+  top: 1px;
 }
 
 .col-2 {
@@ -115,8 +115,8 @@ img {
 .unit {
   color: #ffffff;
   position: relative;
-  top: -70px;
-  right: -85px;
+  top: -25px;
+  right: -5px;
   font-size: 14px;
 }
 
@@ -164,13 +164,13 @@ img {
   color: #464646;
   font-family: "Roboto Mono", monospace;
   font-style: italic;
-  font-size: 20px;
+  font-size: 15px;
   font-weight: 900;
-  position: relative;
-  top: -10px;
-  right: 18px;
-  text-align: center;
+  position: absolute;
+  top: 130px;
+  right: 70px;
   text-transform: capitalize;
+  word-wrap: break-word;
 }
 
 .sign-off {
