--- a/style.css
+++ b/style.css
@@ -85,8 +85,8 @@ img {
   position: relative;
   margin: 0px auto;
   text-align: center;
-  right: 20px;
-  top: 5px;
+  right: -5px;
+  top: -70px;
 }
 
 .col-2 {
@@ -112,23 +112,10 @@ img {
   color: #dfdfdf;
 }
 
-.unit {
-  color: #ffffff;
-  position: relative;
-  top: -70px;
-  right: -85px;
-  font-size: 14px;
-}
-
-.unit a {
-  color: #a3054f;
-  text-decoration: none;
-}
-
 .weather-icon {
   position: relative;
-  left: -30px;
-  top: -8px;
+  left: -50px;
+  top: 18px;
 }
 
 .weather-card-temp {
@@ -164,10 +151,42 @@ img {
   color: #464646;
   font-family: "Roboto Mono", monospace;
   font-style: italic;
-  font-size: 20px;
+  font-size: 15px;
   font-weight: 900;
   position: relative;
-  top: -10px;
-  right: 18px;
+  top: -97px;
+  left: 2px;
+  text-transform: capitalize;
+  text-wrap: wrap;
+}
+
+.sign-off {
   text-align: center;
+  font-size: 12px;
+  text-decoration: none;
+}
+.sign-off a {
+  text-decoration: none;
+}
+
+.unit {
+  color: #464646;
+  position: relative;
+  top: -142px;
+  right: -48px;
+  font-size: 14px;
+}
+
+.unit a {
+  color: #464646;
+  text-decoration: none;
+}
+
+.unit .active {
+  color: #ffffff;
+  cursor: default;
+}
+
+.unit .active:hover {
+  text-decoration: none;
 }
