Revert "Merge branch 'main' of https://github.com/Hope-coding/weather-app"
This reverts commit ab3ac8800f5c8ffb59a927feac4ce7adaad396eb, reversing
changes made to 2d9e4fa0a9183668a97eb44c6893309b98e71275.

--- a/src/style.css
+++ b/src/style.css
@@ -103,13 +103,13 @@ img {
 }
 
 .highest-temp {
-  font-weight: 800;
+  font-weight: 500;
 }
 
 .highest-temp,
 .lowest-temp {
   font-size: 12px;
-  color: #fafafa;
+  color: #dfdfdf;
 }
 
 .weather-icon {
@@ -173,7 +173,7 @@ img {
   color: #464646;
   position: relative;
   top: -142px;
-  right: -38px;
+  right: -48px;
   font-size: 14px;
 }
 
