--- a/src/style.css
+++ b/src/style.css
@@ -103,13 +103,13 @@ img {
 }
 
 .highest-temp {
-  font-weight: 500;
+  font-weight: 800;
 }
 
 .highest-temp,
 .lowest-temp {
   font-size: 12px;
-  color: #dfdfdf;
+  color: #fafafa;
 }
 
 .weather-icon {
@@ -173,7 +173,7 @@ img {
   color: #464646;
   position: relative;
   top: -142px;
-  right: -48px;
+  right: -35px;
   font-size: 14px;
 }
 
