--- a/src/style.css
+++ b/src/style.css
@@ -6,14 +6,14 @@ body {
 
 h1 {
   color: #000000;
-  font-family: "Alumni Sans Collegiate One", sans-serif;
+  font-family: "Poppins", sans-serif;
   font-style: italic;
   font-size: 65px;
 }
 
 h6 {
   color: #2c2c2c;
-  font-family: "Alumni Sans Collegiate One", sans-serif;
+  font-family: "Poppins", sans-serif;
   font-style: normal;
   font-size: 30px;
   line-height: 30px;
@@ -21,7 +21,7 @@ h6 {
 
 h7 {
   color: #2c2c2c;
-  font-family: "Alumni Sans Collegiate One", sans-serif;
+  font-family: "Poppins", sans-serif;
   font-style: normal;
   font-size: 35px;
   line-height: 30px;
@@ -34,6 +34,12 @@ h7 {
 .card-body {
   text-align: center;
   margin: 0 auto;
+}
+
+.poppins-semibold {
+  font-family: "Poppins", sans-serif;
+  font-weight: 600;
+  font-style: normal;
 }
 
 .card-text,
